@@ -4,6 +4,7 @@ v2.0.2
 Fixed bug regarding releveling with a single covariate with only two levels inside formula
 Internal changes to plotting
 Allowed p OR q to be supplied to survCIs
+Allowed MCMC chains to be run in parallel
 
 v2.0.1
 Fixed rownames bug for imputeCens when imputeType = ‘median’
